--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.0",
     "@iconify-json/carbon": "^1.0.13",
+    "@iconify-json/heroicons-outline": "^1.0.2",
+    "@iconify-json/tabler": "^1.0.12",
     "@types/node": "^17.0.8",
     "@unocss/reset": "^0.22.2",
     "@vitejs/plugin-vue": "^2.0.1",
