--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vueuse/core": "^7.7.1",
     "@vueuse/integrations": "^7.7.1",
+    "axios": "^0.26.1",
     "fuse.js": "^6.5.3",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
