--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vueuse/core": "^7.7.1",
     "@vueuse/integrations": "^7.7.1",
     "fuse.js": "^6.5.3",
+    "ohmyfetch": "^0.4.21",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
